--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "d3-time": "^3.1.0",
     "d3-time-format": "^4.1.0",
     "date-fns": "^4.1.0",
+    "hamo": "1.0.0-dev.6",
     "lucide-react": "^0.479.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
