--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.24.0",
+    "@tailwindcss/postcss": "^4.1.5",
     "@types/d3-scale": "^4.0.9",
     "@types/d3-time": "^3.0.4",
     "@types/d3-time-format": "^4.0.3",
