--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "d3": "^7.9.0",
     "d3-scale": "^4.0.2",
     "d3-time": "^3.1.0",
     "d3-time-format": "^4.1.0",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@eslint/js": "^9.24.0",
     "@tailwindcss/postcss": "^4.1.5",
+    "@types/d3": "^7.4.3",
     "@types/d3-scale": "^4.0.9",
     "@types/d3-time": "^3.0.4",
     "@types/d3-time-format": "^4.0.3",
