--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "d3-time": "^3.1.0",
     "d3-time-format": "^4.1.0",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "hamo": "1.0.0-dev.6",
     "lucide-react": "^0.487.0",
     "react": "^19.1.0",
