--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "hamo": "1.0.0-dev.6",
-    "lucide-react": "^0.487.0",
+    "lucide-react": "^0.514.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "recharts": "^2.15.2",
+    "recharts": "3.0.0-beta.1",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
     "tailwindcss-animate": "^1.0.7"
