--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "hamo": "1.0.0-dev.6",
-    "lucide-react": "^0.514.0",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-use-draggable-scroll": "^0.4.7",
     "react-use-gesture": "^9.1.3",
-    "recharts": "3.0.0-beta.1",
+    "recharts": "3.1.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
     "tailwindcss-animate": "^1.0.7"
@@ -55,6 +55,6 @@
     "globals": "^16.0.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.29.1",
-    "vite": "^6.2.5"
+    "vite": "^7.0.3"
   }
 }
